welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: reassignment to val
  c=getCouleurSol()
   ^